# GradeLens-Backend

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
apps/accounts/: models.py  serializers.py  urls.py  views.py
apps/accounts/grader_utils/: execute_grader.py  grader.py
apps/accounts/migrations/: 0001_initial.py  0002_usertoken.py  0003_exam_rubrics.py  0004_enrollment.py  0005_studentexamsubmission_studentanswer.py  0006_coursenote.py  0007_documentchunk.py  0008_alter_studentexamsubmission_unique_together_and_more.py  0009_alter_studentexamsubmission_unique_together_and_more.py
config/: settings.py  urls.py  wsgi.py
graders/: exam_1_graders.pkl  exam_2_graders.pkl  exam_5_graders.pkl  exam_6_graders.pkl  exam_7_graders.pkl  exam_8_graders.pkl  exam_9_graders.pkl
